--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "replicate": "^1.4.0",
     "three": "^0.181.2"
   },
   "devDependencies": {
