--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.8.7",
@@ -21,12 +22,15 @@
     "@react-three/fiber": "^9.4.0",
     "@supabase/supabase-js": "^2.86.0",
     "expo": "~54.0.25",
+    "expo-auth-session": "^7.0.9",
     "expo-av": "~16.0.7",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "^15.0.7",
     "expo-font": "~14.0.9",
     "expo-gl": "^16.0.7",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
+    "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.9",
     "expo-router": "~6.0.15",
     "expo-splash-screen": "~31.0.11",
